Fix overlapping subheadings on landing page

--- a/src/components/styles/Landing.css
+++ b/src/components/styles/Landing.css
@@ -226,6 +226,9 @@ h2.landing-info-h2 {
   position: relative;
   margin-left: -5px;
 }
+h2.landing-info-h2-white {
+  margin-top: 10px;
+}
 .landing-h2-2 {
   position: absolute;
   top: 0;
